--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <p>AI, NLP, computer vision, and machine learning.</p>
+        <p>Machine learning, web development, cybersecurity </p>
         <p class="mb-0"></p>
       </div>
     </section>
