--- a/index.html
+++ b/index.html
@@ -90,8 +90,9 @@
           <div class="resume-content">
             <h3 class="mb-0">University Of Western Australia</h3>
             <div class="subheading mb-3">Software Engineering</div>
-            <div>Completed units : Systems Programming, Embedded Systems, AI & Machine Learning, Agile Web Development, Computer Networks, Data Structure & Algorithms,
-              Cloud Computing, High Performance Computing, 
+            <div>Completed units : Systems Programming, Digital And Embedded Systems, Artificial Intelligence And Adaptive Systems, Agile Web Development, Data Structures & Algorithms,
+              Cloud Computing, High Performance Computing, Computational Data Analysis, Machine Learning, Software Testing And Quality Assurance, Software Requirements And Design,
+              Risk, Reliability, And Safety, The Internet Of Things, Cybersecurity
             </div>
           </div>
           <div class="resume-date text-md-right">
