--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <h1 class="mb-0">Daniel
           <span class="text-primary">Santosa</span>
         </h1>
-        <div class="subheading mb-5">Master Professional Engineering Student<br>
+        <div class="subheading mb-5">Master Professional Software Engineering Student<br>
           <a href="mailto:santosa.daniel@hotmail.com">email : santosa.daniel@hotmail.com</a>
         </div>
         <p class="lead mb-5">.</p>
@@ -89,7 +89,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">University Of Western Australia</h3>
-            <div class="subheading mb-3">Master Professional Engineering</div>
+            <div class="subheading mb-3">Master Professional Software Engineering</div>
             <div>Completed units : Systems Programming, Digital And Embedded Systems, Artificial Intelligence And Adaptive Systems, Agile Web Development, Data Structures & Algorithms,
               Cloud Computing, High Performance Computing, Computational Data Analysis, Machine Learning, Software Testing And Quality Assurance, Software Requirements And Design,
               Risk, Reliability, And Safety, The Internet Of Things, Cybersecurity
